# fem2d

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
apps/fem_cli/: main.cpp
tests/: CMakeLists.txt
